--- a/wercker.yml
+++ b/wercker.yml
@@ -15,7 +15,7 @@ build:
     - script:
         name: Checking using repoman
         code: |-
-          docker run -v $(pwd):/overlay -i -t aegypius/overlay-env:latest repoman ci --pretend --verbose
+          docker run -v $(pwd):/overlay -i -t aegypius/overlay-env:latest repoman --pretend --verbose full
 
   after-steps:
     - script:
