--- a/wercker.yml
+++ b/wercker.yml
@@ -8,6 +8,11 @@ build:
           if test -f "$WERCKER_CACHE_DIR/docker-images/overlay-env.tgz"; then docker load < "$WERCKER_CACHE_DIR/docker-images/overlay-env.tgz"; fi
 
     - script:
+        name: List docker images (debug)
+        code: |-
+          docker images
+
+    - script:
         name: Pull latest overlay-env
         code: |-
           docker pull aegypius/overlay-env:latest
@@ -15,7 +20,7 @@ build:
     - script:
         name: Checking using repoman
         code: |-
-          docker run -v $(pwd):/overlay -i -t aegypius/overlay-env:latest repoman --full --include-dev --pretend --verbose
+          docker run -v $(pwd):/overlay -i -t aegypius/overlay-env:latest repoman full --include-dev --pretend --verbose
 
   after-steps:
     - script:
