--- a/sets.conf
+++ b/sets.conf
@@ -1,5 +1,5 @@
-[aegypius sets]
+[mschoenlaub sets]
 class = portage.sets.files.StaticFileSet
 multiset = true
-directory = ${repository:aegypius}/sets/
+directory = ${repository:mschoenlaub}/sets/
 world-candidate = True
